--- a/_config.yml
+++ b/_config.yml
@@ -2,25 +2,26 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
-email: you@example.com
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
+title: blank                  # the website title (if blank, full name will be used instead)
+first_name: Eaman
+middle_name: 
+last_name: Jahani
+email: eaman@berekely.edu
+description: >                # the ">" symbol means to ignore newlines until "footer_text:"
+  Eaman Jahani's personal webpage
 
-lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+#footer_text: >
+#  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+#  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+#  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+keywords:                     # add your own keywords or leave empty
 
-url: https://alshedivat.github.io # the base hostname & protocol for your site
-baseurl: /al-folio # the subpath of your site, e.g. /blog/
-last_updated: false # set to true if you want to display last updated in the footer
+lang: en    # the language of your site (for example: en, fr, cn, ru, etc.)
+icon:       # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+
+url:                          # the base hostname & protocol for your site (SHOULD BE EMPTY)
+baseurl:                      # the subpath of your site, e.g. /blog/ (SHOULD BE EMPTY)
+last_updated: true            # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
@@ -29,7 +30,7 @@ impressum_path:  # set to path to include impressum link in the footer, use the 
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -55,37 +56,37 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: # your GitHub user name
-gitlab_username: # your GitLab user name
-twitter_username: # your Twitter handle
-linkedin_username: # your LinkedIn user name
-scholar_userid: # your Google Scholar ID
-orcid_id: # your ORCID ID
-medium_username: # your Medium username
-quora_username: # your Quora username
-publons_id: # your ID on Publons
-research_gate_profile: # your profile on ResearchGate
-blogger_url: # your blogger URL
-work_url: # work page URL
-keybase_username: # your keybase user name
-wikidata_id: # your wikidata id
-dblp_url: # your DBLP profile url
-stackoverflow_id: #your stackoverflow id
+github_username: eamanj       # your GitHub user name
+gitlab_username:              # your GitLab user name
+twitter_username: eamanjahani # your Twitter handle
+linkedin_username:            # your LinkedIn user name
+scholar_userid: eamanj        # your Google Scholar ID
+orcid_id:                     # your ORCID ID
+medium_username:              # your Medium username
+quora_username:               # your Quora username
+publons_id:                   # your ID on Publons
+research_gate_profile:        # your profile on ResearchGate
+blogger_url:                  # your blogger URL
+work_url:                     # work page URL
+keybase_username:             # your keybase user name
+wikidata_id:                  # your wikidata id
+dblp_url:                     # your DBLP profile url
+stackoverflow_id:             # your stackoverflow id
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+#  You can even add a little note about which of these is the best way to reach you.
 
-google_analytics:  # your google-analytics ID (format: UA-XXXXXXXXX)
-google_site_verification:  # your google-site-verification ID (Google Search Console)
-bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
-panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
+google_analytics:             # your google-analytics ID (format: UA-XXXXXXXXX)
+google_site_verification:     # your google-site-verification ID (Google Search Console)
+bing_site_verification:       # out your bing-site-verification ID (Bing Webmaster)
+panelbear_analytics:          # panelbear analytics site ID (format: XXXXXXXXX)
 
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio  # your blog must have a name for it to show up in the nav bar
-blog_description: a simple whitespace theme for academics
+blog_name:                  # your blog must have a name for it to show up in the nav bar
+blog_description: daily ramblings of Eaman
 permalink: /blog/:year/:title/
 
 # Pagination
@@ -213,20 +214,19 @@ jekyll-archives:
 # -----------------------------------------------------------------------------
 
 scholar:
-
-  last_name: Einstein
-  first_name: [Albert, A.]
+  
+  last_name: Jahani
+  first_name: Eaman
 
   style: apa
   locale: en
 
+  sort_by: year
+  order: descending
+
   source: /_bibliography/
   bibliography: papers.bib
   bibliography_template: bib
-  # Note: if you have latex math in your bibtex, the latex filter
-  # preprocessing may conflict with MathJAX if the latter is enabled.
-  # See https://github.com/alshedivat/al-folio/issues/357.
-  bibtex_filters: [latex, smallcaps, superscript]
 
   replace_strings: true
   join_strings: true
