--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank                  # the website title (if blank, full name will be u
 first_name: Eaman
 middle_name: 
 last_name: Jahani
-email: eaman@berekely.edu
+email: eaman@berkeley.edu
 description: >                # the ">" symbol means to ignore newlines until "footer_text:"
   Eaman Jahani's personal webpage
 
