--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ collections:
     output: true
     permalink: /news/:path/
   projects:
-    output: true
+    output: false
     permalink: /projects/:path/
 
 news_limit: 5
